fixed spacing in small pages

--- a/css/queries.css
+++ b/css/queries.css
@@ -132,6 +132,15 @@
     font-weight: 500;
     font-size: 2.3rem;
   }
+
+  /* OTHER PAGES */
+  .hero-common-section {
+    min-height: 50vh;
+  }
+
+  .hero-common {
+    margin-bottom: 8rem;
+  }
 }
 
 /**************************/
@@ -196,10 +205,10 @@
   }
 
   /* OTHER PAGES */
-  /* .hero-common {
-    margin-top: 16.9rem;
-    margin-bottom: 12.9rem;
-  } */
+
+  .hero-common-title {
+    margin-bottom: 2.4rem;
+  }
 }
 
 /**************************/
