--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,7 @@
 
 .hero-common-section {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   min-height: 70vh;
 }
